@@ -1,4 +1,10 @@
 2007-12-16  Stuart Brorson (sdb@cloud9.net)
+	* src/callbacks.c, src/render.c, src/gerb_error.h,
+	src/drill.c, src/drill_stats.[hc]:  Implemented reporting
+	of all parse errors (with error level) found during 
+	parsing of the drill file.
+	
+2007-12-16  Stuart Brorson (sdb@cloud9.net)
 	* src/drill.[hc], src/drill_stats.[hc]:
 	Fixed bug noticed by Joerg involving display of statistics 
 	in drill file with M71 calling out metric units.
